--- a/src/app/video-center/video-center.component.html
+++ b/src/app/video-center/video-center.component.html
@@ -3,6 +3,6 @@
         <app-video-details></app-video-details>
     </div>
     <div class="col-sm-3">
-        <app-video-list></app-video-list>
+        <app-video-list [videos]="video"></app-video-list>
     </div>
 </div>
