--- a/src/app/video-center/video-center.component.html
+++ b/src/app/video-center/video-center.component.html
@@ -1,8 +1,10 @@
 <div class="row">
     <div class="col-sm-9">
-        <app-video-details></app-video-details>
+        <app-video-details [selectVideo]="selectedVideoUrl"></app-video-details>
     </div>
     <div class="col-sm-3">
-        <app-video-list [videos]="video"></app-video-list>
+        <app-video-list (selectedVideo)="onSelectVideo($event)" [videos]="video"></app-video-list>
     </div>
 </div>
+<span>{{errorMsg}}</span>
+<button type="button" class="btn btn-primary" [routerLink]="['/post']">Add Video</button>
